# ytranscribe

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  skills-lock.json
src/ytranscribe/apps/: api_app.py  api_queue_app.py
src/ytranscribe/cli/: main.py
src/ytranscribe/core/: audio.py  deps.py  downloader.py  errors.py  formatters.py  transcriber.py
src/ytranscribe/queue/: worker.py
src/ytranscribe/utils/: io_utils.py  logging_utils.py  paths.py  title_map.py
